@@ -58,7 +58,7 @@ ags_time_get_uptime_from_offset(guint offset,
   /* translate to time string */
   tact_redux = offset;
 
-  delay_sec = ((bpm / delay_factor) / 60.0);
+  delay_sec = 16.0 * delay_factor * bpm / 60.0;
   delay_min = delay_sec * 60.0;
   delay_msec = delay_sec / 1000.0;
 
